# image-reconstruction

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_and_compile.sh
codigo/: discretizador.h  geometrias.h  main.cpp  matrix_algos.cpp  matrix_algos.h  matrix_type.h  rayos.cpp  rayos.h
codigo/ppmloader/: ppmloader.cpp  ppmloader.h  prueba.ppm
codigo/verificador/: discretizador.h  main.cpp  matrix.h  matrix_algos.cpp  matrix_algos.h  matrix_type.h
imgs_TC/: tomo.pgm  tomo2.pgm  tomo3.pgm
imgs_TC/cornell_imgs/: 000000.pgm  000001.pgm  000002.pgm  000003.pgm  000004.pgm  000005.pgm  000006.pgm  000007.pgm  000008.pgm  000009.pgm  000010.pgm  000011.pgm  000012.pgm  000013.pgm  000014.pgm  000015.pgm  000016.pgm  000017.pgm  000018.pgm  000019.pgm  000020.pgm  000021.pgm  000022.pgm
imgs_TC/cornell_imgs/dicom/: 000000.dcm  000001.dcm  000002.dcm  000003.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm  000010.dcm  000011.dcm  000012.dcm  000013.dcm  000014.dcm  000015.dcm  000016.dcm  000017.dcm  000018.dcm  (+4 more)
notebooks/: compare_with_cpp_implementation.ipynb  exp_varias_geos.ipynb  levantar_imagenes.ipynb  matrix_file_handlers.py  np_load.py  resultados_g4_20_25_50__1000_5000.csv  same_dataframe_plus_mse_vs_benchmark.csv  svd_least_squares.ipynb
notebooks/debug_matrices/: D.mat  t.mat  t_20x20_3000_rays.mat
results/: g4__50_celdas_0_ruido_10000_rayos.pgm  g4__50_celdas_25_ruido_10000_rayos_25r.pgm  g4__50_celdas_50_ruido_10000_rayos50.pgm
src/: Svd.cpp
test/: CMakeLists.txt  Matrix_test.cpp  Svd_test.cpp
tests/: main.cpp
